se termino por implementar SOLID
